--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ ul {
   /* Styling the navigation bar */
   nav {
     background-color: #333;
+    
+    
   }
   
   nav ul {
@@ -26,7 +28,7 @@ ul {
   }
   
   nav ul li a:hover {
-    background-color: #555;
+    background-color: #f20909;
   }
 
   /* Adding media query to make the website responsive */
@@ -56,6 +58,55 @@ ul {
                     margin-bottom: 10px;
                     color: #333;
                     }
-                    
+
+                    .sidebar {
+                      width:200px;
+                      height: 100%;
+                      background-color: #5d07f1;
+                      color: white;
+                      position: fixed;
+                      top: 0;
+                      left: 0;
+                      padding: 10px;
+                      margin: 0px;
+                    }
+                    .sidebar ul li a{
+                      color: white;
+                     text-decoration: none;
+                      padding: 10px 15px;
+                     border-radius: 5px;
+                    }
+                    .sidebar ul li a:hover {
+                      background-color: #28f343;
+                    }
+                      
+  .sidebar ul li {
+    margin: 50px;
+    
+  }
+  button {
+    background-color: rgb(15, 15, 17);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 50px;
+  }
+  button:hover {
+    background-color: lightblue;
+    color: black;
+  }
+  .but{
+    background-color: rgb(15, 15, 17);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 50px;
+  }
+  .but:hover{
+    background-color: rgb(238, 15, 15);
+    
+  }
   
   
